# coco-visualize

./: .coverage  .gitignore  AUTHORS  DEVELOPMENT.md  MANIFEST.in  README.md  env.yaml  example.ipynb  flake.nix  pyproject.toml
.github/workflows/: build-wheel.yml  python-package.yml  run-tests.yml  tag-release.yml  test.yml
demo/: cocopp-integration.ipynb  example.ipynb
scripts/: clean-notebooks.py
src/cocoviz/: __init__.py  _typing.py  cocopp.py  ert.py  exceptions.py  indicator.py  plot.py  result.py  rtp.py  targets.py  types.py  utilities.py
tests/: test_read_cocopp.py  test_result.py  test_result_parquet.py  test_resultset.py  test_runtime_profile.py  test_scale_lightness.py
tutorial/: README.md  problem.py  pybroject.toml  run-cmaes.py  run-powell.py  run-simulatedannealing.py  tutorial.ipynb
