[build-system]
requires = [
  "setuptools >= 67.0",
  "setuptools-scm >= 8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "coco-visualize"
authors = [
  {name = "Dimo Brockhoff", email = "dimo.brockhoff@inria.fr" },
  {name = "Nikolaus Hansen", email = "nikolaus.hansen@inria.fr" },
  {name = "Olaf Mersmann", email = "olafm@p-value.net"},
  {name = "Tea Tušar", email = "tea.tusar@ijs.si" },
]
description = 'Standalone COCO visualization toolbox'
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [ 
  "numpy >= 2.0",
  "polars >= 0.20",
  "matplotlib >= 3.7",
  "scipy >= 1.14.0"
]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/cocoviz/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest]
log_cli = true
addopts = "--doctest-modules"

[project.urls]
Homepage = "https://github.com/numbbo/coco"
Documentation = "https://numbbo.github.io/coco-doc/apidocs/cocoex/"
Issues = "https://github.com/numbbo/coco/issues"
